0031715: Visualization - add access to proxy shader program